# networth-app

./: .env.example  Makefile  README.md  docker-compose.yml
api/: Dockerfile  pyproject.toml  verify_setup.py
api/alembic/: env.py
api/alembic/versions/: 3ae7e8a20071_create_users_and_holdings_tables.py
api/app/: main.py
api/app/core/: config.py  db.py
api/app/models/: user.py
api/tests/: test_models.py
worker/: Dockerfile  pyproject.toml
worker/worker_app/: celery_app.py  tasks.py
